[feature/signup] fixed issue where icons were not visible on signup pages

--- a/src/pages/SignUp.module.scss
+++ b/src/pages/SignUp.module.scss
@@ -89,8 +89,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 24px;
-  height: 24px;
 }
 
 .btn-primary {
